k8s/base/plantsuite/portal/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: portal
spec:
  hosts:
    - portal.plantsuite.local
  gateways:
    - istio-ingress/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            port:
              number: 80
            host: portal
